// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Repeater renders correctly 1`] = `
<View
  style={{}}
>
  <Text>
    Item
  </Text>
  <Text>
    Item
  </Text>
  <Text>
    Item
  </Text>
  <Text>
    Item
  </Text>
  <Text>
    Item
  </Text>
</View>
`;

exports[`Repeater renders correctly with custom styles 1`] = `
<View
  style={
    {
      "backgroundColor": "red",
    }
  }
>
  <Text>
    Item
  </Text>
  <Text>
    Item
  </Text>
  <Text>
    Item
  </Text>
  <Text>
    Item
  </Text>
  <Text>
    Item
  </Text>
</View>
`;

exports[`Repeater renders correctly with empty list 1`] = `<View />`;
